[gd_scene load_steps=3 format=3 uid="uid://ti52vj3ifdb3"]

[ext_resource type="Script" uid="uid://yprnp58j17q0" path="res://Scripts/GUI/time_display.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]

[node name="TimeDisplay" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 77.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -42.0
offset_right = 70.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dawn (06:00)"
label_settings = SubResource("LabelSettings_1")

[node name="PhaseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ðŸŒ… Dawn"

[node name="SpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Speed: 1.0x"

[node name="ControlsLabel" type="Label" parent="VBoxContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "1-4: Set Time | 5-6: Speed
Space: Pause"
